tests/neg/i9330.scala
val x = {
  () == ""
  implicit def foo[A: A] // error // error // error
}
